--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,5 @@ ark-crypto-primitives = "0.5.0"
 ark-poly-commit = "0.5.0"
 ark-groth16 = "0.5.0"
 generic-array = "0.14.6"
+clap = "4.1.8"
+flate2 = "1.0.25"
